# rebar

./: .dco-verify-probe.txt  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .import-cycle-baseline.json  .pre-commit-config.yaml  .reconciler-pass-lock  .s1-botmerge.txt  .s1-e5.txt  .s1-pushmerge-test.txt  .s1pos2.txt  .s2-smoke.txt  .s3-ci.txt  .s3-ci2.txt  .store-compat.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  REMEDIATION_PROPOSAL.md  SECURITY.md  SUPPORT.md  ci-e2e-probe.txt  cliff.toml  docker-compose.langfuse.yml  hatch_build.py  pyproject.toml  rebar.toml  server.json
.bridge_state/: bindings-retired.json  bindings.json  prev_snapshot.json
.codex/: config.toml
.github/: LOCKDOWN_TEST.md  dependabot.yml  module-size-allowlist.txt  module-size-ceilings.txt  pull_request_template.md  release-requirements.in  release-requirements.txt
.joe-janitor/: report-2026-06-24.md  report-2026-07-02.md  tools.md
.rebar/: criteria_routing.json  plan_review_moves.json  trusted_environments.yaml
003a-09ae-9983-4007/: 1782453187270406001-b3c8e0a8-99b6-4311-8856-16e638696a86-CREATE.json  1782453227171426001-c5f21cf9-c9f0-4af3-bcdb-8892819d6c57-COMMENT.json  1782573370554205001-f8b6cb8a-80ff-4b47-9d17-805772e975f8-LINK.json  1782573373976872001-d4bb3880-5b28-4891-9fa5-a72e5ac711a6-COMMENT.json
003d-e6b0-9e58-4b52/: 1783784840020267001-07a0070a-b882-4aa8-a51d-4c7995e7fcde-CREATE.json.retired  1783785228638433001-36770a98-810f-473e-af8a-c2fb8a7ee3d2-FILE_IMPACT.json  1783806356376993001-d63c565f-c738-4e92-872b-d6a5888e410d-REVIEW_RESULT.json  1783806358702922001-451cb4ca-8224-40c2-adcb-8c54a9a9718a-SIGNATURE.json.retired  1783806360803407001-58a7be14-9786-4aec-bb86-ef43f10c191f-ENQUEUE_ENRICH.json  1783806504340307001-2551a905-9e3f-451f-b003-b068515be563-STATUS.json  1783806504340942001-a058e9d7-115b-4e0c-a5ce-1dcbbeeb23f8-EDIT.json.retired  1783807009324543238-53ae039a-00b6-46ab-b619-38bf5881325c-EDIT.json  1783807009324543239-7878d275-3cd0-442d-ac36-24c665eccdb2-SNAPSHOT.json  1783808879011696782-a95a2266-3ba3-44bf-b4f8-77dc397ef8cc-LINK.json  1783810108686676001-b3314789-bf32-4105-87e2-17293a03a34a-CLAIM_ENRICH.json  1783810117223069001-c6fa3ef5-50c8-47f7-bcc1-1374451ed182-TICKET_DIGEST.json  1783810120462104001-a1a6833d-1bba-41c9-8314-797b06262de8-DONE_ENRICH.json  1783810512074709001-03458cdb-0292-4034-aedc-72e78cfdf6ed-STATUS.json  1783810512214894001-f1df8525-fa41-4fd9-bed1-e02650b9a6f0-SIGNATURE.json  1783810794669255001-8c02dad6-e4ca-42c2-8ef8-bad9335452b5-COMMENT.json  1783811180251828001-532c9d03-a95a-49d0-9970-20016d0e06e8-ENQUEUE_ENRICH.json  1783811182632719001-ea084047-1c77-49f7-a7c0-4208037f82f3-CLAIM_ENRICH.json  1783811193000381001-87c401b3-642b-433d-86ba-24ec503a1f16-TICKET_DIGEST.json  1783811195003427001-070260a1-fad9-4015-bd1f-a9b38e294bd6-DONE_ENRICH.json
0086-8334-e79b-4daa/: 1781220181145659000-550a549e-c6f4-4ebc-a5b6-a79e5622be81-CREATE.json  1781220306209903000-5141909b-d8fd-483a-8bd9-d4ebe338d938-EDIT.json  1781220306703310000-d3905993-ca4c-4b67-9cff-d202e7c5a530-EDIT.json  1781220806297996000-90250731-d183-4309-8083-2bed775bcfab-EDIT.json  1781221213097301000-7932d691-1b3b-47df-820f-805e91d47431-EDIT.json  1781221563884883000-d5efb0d6-8e5e-42d3-ae41-8d4604e60162-STATUS.json  1781221563913502000-3abe4e5e-9c7f-4a41-9226-32d0f40a5d35-ARCHIVED.json
00da-b1af-89d4-4c47/: 1782081761379041001-cabd3ec5-36a0-49e5-893c-09284ee25b2b-CREATE.json  1782081774594155001-e1c9e74f-e3d2-4ae1-bf98-2e50d98bc212-LINK.json  1782101995114280001-d960d5f0-fec9-41af-8fe4-c50e2ccd96ab-STATUS.json  1782101995114726001-21e88ba2-3d77-4ade-9d67-0484c507324b-EDIT.json  1782102878665851001-b7b515ac-1168-4050-b020-e3628e9ea7c9-FILE_IMPACT.json  1782102880399784001-90f453d2-5837-4ad7-a1c2-0ef41fa1b470-VERIFY_COMMANDS.json  1782102882102325001-350134bb-e836-49e8-8a77-651d2b219fc7-COMMENT.json  1782102970034158001-b5ec2fb6-d950-456f-88a4-11406221f7e7-STATUS.json  1782102970100084001-4b4d3c6f-c512-47a2-938d-d0912c9190f7-SIGNATURE.json  1782102971837544001-8c8d4274-5cd0-464a-92d6-71043ba17c67-SNAPSHOT.json  1782110355078872001-a07e1334-d939-4648-afd2-dac1e33bac6e-COMMENT.json  1782176008107441001-2535a4c0-c385-4f2b-9ae2-4501aa2df74a-COMMENT.json  1782446334450529772-bacf2752-a940-4997-aa7f-39e1d75de3da-EDIT.json
0128-9a17-79db-450e/: 1783721701163196001-a59d964b-7164-42ce-bbf1-82d21344e616-CREATE.json  1783721703475848001-f87fb0d0-bf89-422f-ba2c-6d9b4952650e-FILE_IMPACT.json  1783724557121205001-39abf91b-3d1f-4303-8c4f-b2c15ff787ff-REVIEW_RESULT.json  1783725676858005001-1642681a-be9f-493b-9ca5-926e7d2826bb-LINK.json  1783725996647000001-d1cb5d7f-7cf2-45e2-90a7-f6f89589103a-EDIT.json  1783728952644348001-ef36348a-0889-4a36-980c-ad0d31c725da-EDIT.json  1783730638021083001-edb73f0a-cce9-4115-b2c9-04479fb5fef0-REVIEW_RESULT.json  1783743349070583001-ef7ceb1e-97dd-4f5e-894e-77f278b03ea5-COMMENT.json  1783743351054493001-3b47f145-a0be-4d36-ba7c-b18d5f91e2d0-ARCHIVED.json
012e-bd01-75c6-40a3/: 1782061988668144001-7b17fb53-518b-4c27-936e-6f9fbd0acf74-CREATE.json  1782064626025592001-2e9afd09-f8d2-4074-8c7f-c39163e508b6-EDIT.json  1782081511739066001-89bf4d59-ea57-4b57-b942-8b684d84865c-EDIT.json  1782081911856896001-2b8d79ec-9ba2-4a09-87b0-cb06a4bcec03-EDIT.json  1782267840787272001-ce3a53c8-d0e2-4961-8703-9751c769ada3-EDIT.json  1782267862360600001-5da18bec-7fb6-4f06-91a5-ffb377b1cd3f-COMMENT.json  1782270142787684001-4fcc252e-ebb0-43bf-90d6-fcf2b703f27f-EDIT.json  1782274454141494001-d7bbccd4-48f2-44ee-9679-1bdc06555dab-STATUS.json  1782274454141989001-4fc8ef00-8306-4aaa-a124-7745b61e9693-EDIT.json  1782275313910411001-85980762-5c73-4f6b-86fd-8b548b5720ca-REVIEW_RESULT.json  1782275315630713001-e87072d9-0623-414e-86cc-7d9b8aa8f89d-SIGNATURE.json  1782277771293779001-8f2bccef-467e-48e9-97d0-fd6e761b9636-COMMENT.json  1782277872558076001-41e10aa0-cf15-4b6e-891e-9f6776e5a1ad-COMMENT.json  1782277925527893001-216999dc-4d01-494b-ae0c-4939760d709d-STATUS.json  (+5 more)
(+31548 files in other folders)
