[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name (PyPI). The import package stays `rebar` and the console
# scripts stay `rebar` / `rebar-mcp` — those are independent of the dist name.
# `rebar` itself is taken on PyPI (Eventbrite), so we publish under `nava-rebar`.
name = "nava-rebar"
version = "0.5.0"
description = "Event-sourced ticket system with a Jira reconciler — CLI, Python library, and MCP server."
readme = "README.md"
# Floor is 3.11: the reconciler uses enum.StrEnum (new in 3.11) — see
# rebar_reconciler/mutation.py / inbound_probe.py. (Was previously declared
# >=3.10, but that never actually worked; corrected here.)
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = []

# The engine assets (the rebar_reconciler package + jira-capability-probe.py + the
# alias wordlist) are stdlib-only and ship as package data under rebar/_engine/.
# System prerequisites (not pip deps): git, and `acli` (only for live Jira
# reconciliation).

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8",
    "mcp>=1.2",
    "jsonschema>=4.18",
    "hatchling>=1.18",
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest-cov>=5",
]

[project.scripts]
rebar = "rebar.cli:main"
rebar-mcp = "rebar.mcp_server:main"

[tool.hatch.build.targets.wheel]
# packages includes the whole src/rebar tree (the _engine dir with the reconciler
# package, the Jira probe, and the alias wordlist ships verbatim as package data —
# hatchling includes all files under the package, not just .py).
packages = ["src/rebar"]
artifacts = [
    "src/rebar/_engine/**/*",
]
# Never ship compiled bytecode. The `artifacts` glob above force-includes engine
# files that .gitignore would otherwise drop, so spell out the bytecode exclusion
# explicitly rather than relying on gitignore filtering (ticket fare-rant-clasp;
# verified by tests/unit/test_engine_dir.py::test_wheel_has_no_bytecode).
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.hatch.build.targets.sdist]
include = ["src/rebar", "tests", "README.md"]

[tool.ruff]
# Engine ships as package data but is normal Python; lint it too. The gating set
# below is the full recommended set — E, F, W, I, UP, B — and the whole tree is
# CLEAN for it, so `ruff check src tests` passes and prevents regressions across
# every one of those families. Coverage spans pycodestyle errors + warnings (E/W,
# including E501 line-length), Pyflakes (F — undefined names, unused imports,
# redefinitions), import sorting (I), pyupgrade modernizations (UP), and the
# flake8-bugbear checks (B — including B007/B017/B904/B905). Re-export facades
# (e.g. reconciler `acli`/`applier`, `rebar.graph`) declare an `__all__` so their
# intentional re-exports satisfy F401; a handful of unbreakable string/data
# literals carry a targeted `# noqa: E501`.
#
# target-version is intentionally kept at the conservative py310 floor (not py311)
# even though requires-python is >=3.11: it keeps the gating UP set from pushing
# 3.11-only idioms (e.g. datetime.UTC) and a risky str+Enum -> StrEnum migration
# as mandatory fixes. Code clean for a py310 target runs fine on 3.11/3.12.
target-version = "py310"
line-length = 100

# Formatting: ruff's recommended defaults (Black-compatible — double quotes,
# space indentation, magic trailing comma honored). `line-length` is inherited
# from [tool.ruff] above. `ruff format --check src tests` gates in CI.
[tool.ruff.format]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
# Scoped, opt-in type checking. The pure in-process library core
# (reducer / graph / _store) is kept type-clean and gated in CI; the rest of the
# tree (engine helpers, reconciler) is checked advisory-only for now.
python_version = "3.11"
ignore_missing_imports = true
# Report errors ONLY in the files passed on the command line, never in modules
# reached via import. This pins the gating scope to exactly the named packages so
# the gate cannot go red because some *other* (not-yet-clean) module is later
# imported by the core. The advisory full-tree run still reports everything,
# because there every file is named on the command line.
follow_imports = "silent"

[tool.coverage.run]
source = ["rebar"]
branch = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit-tier tests (network-guarded)",
    "scripts: scripts-tier tests (engine scripts / reconciler)",
    "integration: integration-tier tests (may require live services)",
    "interface: interface-parity tests (library / CLI / MCP over one store)",
    "allow_network: opt out of the network guard for a test",
    "benchmark: performance benchmark (informational; not a pass/fail gate)",
]
