[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name (PyPI). The import package stays `rebar` and the console
# scripts stay `rebar` / `rebar-mcp` — those are independent of the dist name.
# `rebar` itself is taken on PyPI (Eventbrite), so we publish under `nava-rebar`.
name = "nava-rebar"
version = "0.5.1"
description = "Event-sourced ticket system with a Jira reconciler — CLI, Python library, and MCP server."
readme = "README.md"
# Floor is 3.11: the reconciler uses enum.StrEnum (new in 3.11) — see
# rebar_reconciler/mutation.py / inbound_probe.py. (Was previously declared
# >=3.10, but that never actually worked; corrected here.)
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
# Core stays deliberately tiny. The ONLY runtime dependency is a YAML loader for
# the workflow DSL (epic a88f): loading + running a `.rebar/workflows/*.yaml`
# workflow is a LEAN-RUNTIME capability — it must work without the heavy
# `[agents]`/`[eval]`/`[tracing]` extras — so its parser cannot itself be optional.
# This is consistent with the optionality CI (the import-linter ban-list targets
# only the heavy ML/telemetry stack: anthropic/inspect_ai/langchain*/langgraph*/
# opentelemetry*; pyyaml is intentionally permitted in core). PyYAML's SafeLoader
# is hardened toward YAML 1.2 Core by rebar.llm.workflow.schema (anchors/merge
# keys rejected, 1.1 yes/no/on/off bools dropped). Everything else — the engine
# core and the reconciler — remains stdlib-only.
dependencies = [
    "pyyaml>=6",
]

# The engine assets (the rebar_reconciler package + jira-capability-probe.py + the
# alias wordlist) are stdlib-only and ship as package data under rebar/_engine/.
# System prerequisites (not pip deps): git, and `acli` (only for live Jira
# reconciliation).

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
# LLM agent-operations framework (rebar.llm). OPTIONAL — never required by core
# rebar (the engine stays stdlib-only, `dependencies = []`). The default in-process
# runner is the LangChain/LangGraph stack — the one agent runtime native to BOTH
# Langflow and Langfuse — but everything here is imported lazily, so `import rebar`
# and even `import rebar.llm` stay dependency-free; only *running* an operation
# needs this extra. langchain/langgraph are pinned to the v1 line (the
# `langchain.agents.create_agent` API); langfuse forces pydantic v2. The Langflow
# runner needs no dependency (a stubbed REST seam); custom read-only filesystem
# tools avoid langchain-community.
agents = [
    "langchain>=1,<2",
    "langgraph>=1,<2",
    "langchain-anthropic>=0.3",  # Claude (default provider)
    "langchain-openai>=0.2",     # ChatGPT / OpenAI-compatible local servers
    "langchain-mcp-adapters>=0.3",
    "langfuse>=3",
    "pydantic>=2",
    "deepagents>=0.6",  # opt-in harness runner (planning/subagents); not the review default
]
# Additional model providers are opt-in (keep the default extra lean):
#   pip install langchain-google-genai   # Gemini
#
# Prompt evaluation (epic a88f / WS-G). Net-new extra: Inspect AI is the eval
# substrate; promptfoo interop is via the generated JUnit/config (no pip dep).
# Imported lazily behind `rebar._optional.guard_import(..., extra="eval")`.
eval = [
    "inspect-ai>=0.3.221",
]
# OTLP trace sink (epic a88f / WS-J). Net-new extra. WRITE-ONLY by rule —
# OpenTelemetry is a sink, never read back into a rebar decision (oracle
# discipline). Imported lazily behind guard_import(..., extra="tracing").
tracing = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
dev = [
    "pytest>=8",
    "mcp>=1.2",
    "jsonschema>=4.18",
    "hatchling>=1.18",
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest-cov>=5",
    # Pull the full agents stack so the rebar.llm validation tests (provider
    # construction for Claude + ChatGPT, MCP/Langfuse paths) RUN in CI rather than
    # skipping. Self-referential extra — kept here, not in core, so `pip install
    # nava-rebar` stays dependency-free.
    "nava-rebar[agents]",
]

[project.scripts]
rebar = "rebar.cli:main"
rebar-mcp = "rebar.mcp_server:main"

[tool.hatch.build.targets.wheel]
# packages includes the whole src/rebar tree (the _engine dir with the reconciler
# package, the Jira probe, and the alias wordlist ships verbatim as package data —
# hatchling includes all files under the package, not just .py).
packages = ["src/rebar"]
artifacts = [
    "src/rebar/_engine/**/*",
]
# Never ship compiled bytecode. The `artifacts` glob above force-includes engine
# files that .gitignore would otherwise drop, so spell out the bytecode exclusion
# explicitly rather than relying on gitignore filtering (ticket fare-rant-clasp;
# verified by tests/unit/test_engine_dir.py::test_wheel_has_no_bytecode).
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.hatch.build.targets.sdist]
include = ["src/rebar", "tests", "README.md"]

[tool.ruff]
# Engine ships as package data but is normal Python; lint it too. The gating set
# below is the full recommended set — E, F, W, I, UP, B — and the whole tree is
# CLEAN for it, so `ruff check src tests` passes and prevents regressions across
# every one of those families. Coverage spans pycodestyle errors + warnings (E/W,
# including E501 line-length), Pyflakes (F — undefined names, unused imports,
# redefinitions), import sorting (I), pyupgrade modernizations (UP), and the
# flake8-bugbear checks (B — including B007/B017/B904/B905). Re-export facades
# (e.g. reconciler `acli`/`applier`, `rebar.graph`) declare an `__all__` so their
# intentional re-exports satisfy F401; a handful of unbreakable string/data
# literals carry a targeted `# noqa: E501`.
#
# target-version is intentionally kept at the conservative py310 floor (not py311)
# even though requires-python is >=3.11: it keeps the gating UP set from pushing
# 3.11-only idioms (e.g. datetime.UTC) and a risky str+Enum -> StrEnum migration
# as mandatory fixes. Code clean for a py310 target runs fine on 3.11/3.12.
target-version = "py310"
line-length = 100

# Formatting: ruff's recommended defaults (Black-compatible — double quotes,
# space indentation, magic trailing comma honored). `line-length` is inherited
# from [tool.ruff] above. `ruff format --check src tests` gates in CI.
[tool.ruff.format]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
# Scoped, opt-in type checking. The pure in-process library core
# (reducer / graph / _store) is kept type-clean and gated in CI; the rest of the
# tree (engine helpers, reconciler) is checked advisory-only for now.
python_version = "3.11"
ignore_missing_imports = true
# Report errors ONLY in the files passed on the command line, never in modules
# reached via import. This pins the gating scope to exactly the named packages so
# the gate cannot go red because some *other* (not-yet-clean) module is later
# imported by the core. The advisory full-tree run still reports everything,
# because there every file is named on the command line.
follow_imports = "silent"

[tool.coverage.run]
source = ["rebar"]
branch = true

[tool.coverage.report]
# Documented floor, set well BELOW the measured in-process total (61% on
# 2026-06-14 — see docs/coverage.md). Many tests drive rebar as a subprocess,
# so in-process coverage understates real exercise; the floor is intentionally
# conservative so it documents a minimum without gating routine work. CI runs
# the same `-m "not integration and not external"` selection that produced 61%,
# so this floor does not break the existing (report-only) coverage step.
fail_under = 50

# ── Mutation testing (mutmut 3.x) ─────────────────────────────────────────────
# Scope is deliberately bounded to the highest-value behavioral cores (see
# docs/mutation-testing.md). mutmut walks every .py under `source_paths`, so
# `only_mutate` restricts the actually-mutated set to the core modules; the test
# selection runs only the focused tests that cover those cores so each mutant is
# evaluated in seconds, not minutes. Invocation + scope + score are documented in
# docs/mutation-testing.md.
[tool.mutmut]
source_paths = ["src/rebar"]
only_mutate = [
    "src/rebar/signing.py",
    "src/rebar/_engine_support/gates.py",
    "src/rebar/_engine_support/next_batch.py",
    "src/rebar/_engine_support/validate.py",
    "src/rebar/reducer/_processors.py",
]
# Fast, fail-fast runner over the dev venv; -p no:randomly for determinism and a
# fixed basetemp to dodge the macOS tmp race. The test selection is scoped to the
# files that exercise the mutated cores (see docs/mutation-testing.md for the
# per-module mapping); widen it when broadening `only_mutate`.
pytest_add_cli_args = ["-x", "-q", "-p", "no:randomly", "--basetemp=/tmp/rebar-pytest-mut"]
pytest_add_cli_args_test_selection = [
    # signing.py
    "tests/unit/test_signing.py",
    "tests/interfaces/lifecycle/test_signature.py",
    # reducer/_processors.py (the fast, rich reducer characterization suite)
    "tests/scripts/reducer/",
    "tests/interfaces/store/test_reducer_single_source.py",
    # _engine_support/next_batch.py
    "tests/interfaces/queries/test_next_batch_compute.py",
    "tests/interfaces/queries/test_next_batch_behavior.py",
    # _engine_support/validate.py
    "tests/interfaces/queries/test_validate_compute.py",
    # _engine_support/gates.py
    "tests/interfaces/lifecycle/test_gate_rubric_consistency.py",
    "tests/interfaces/queries/test_ws5d_quality_fileimpact.py",
    "tests/interfaces/lifecycle/test_close_gate_story_epic.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-markers turns an unregistered @pytest.mark.X into a collection error
# (every custom marker must be registered below or via pytest_configure);
# --strict-config does the same for unknown ini keys. Together they keep marker
# typos (e.g. a misspelled tier) from silently passing — part of the external-
# test confinement (bug 4a48-6dd5-aef3-4c8e).
addopts = "--strict-markers --strict-config"
markers = [
    "unit: unit-tier tests (network-guarded)",
    "scripts: scripts-tier tests (engine scripts / reconciler)",
    "integration: integration-tier tests (may require live services)",
    "external: external-integration tests that hit third-party services (live LLM providers, etc.); excluded from the default run; run via the external-integration workflow with credentials",
    "interface: interface-parity tests (library / CLI / MCP over one store)",
    "allow_network: opt out of the network guard for a test",
    "benchmark: performance benchmark (informational; not a pass/fail gate)",
]
